--- a/Projects_page.html
+++ b/Projects_page.html
@@ -37,7 +37,7 @@
     <div class="graybox2"></div>
     <img src="images/TSimage.png" class="img2">
     <h2 class="header2">Text Similarity Program</h2>
-    <p class="txt2">Utilzing a mix of text models and functions that find distinctive similarities in features between differing bodies of text, I was able to create a semi-intelligent AI that is able to somewhat accurately distinguishes what source type a body of text is more likely to have came from.</p>
+    <p class="txt2">Utilzing a mix of text models and functions that find distinctive similarities in features between differing bodies of text, I was able to create an intelligent AI that is able to somewhat accurately distinguish what source type a body of text is more likely to have came from.</p>
     <button class="button2" onclick= window.open('https://towardsdatascience.com/find-text-similarities-with-your-own-machine-learning-algorithm-7ceda78f9710');>Learn More</button>
 
     <div class="graybox3"></div>
