--- a/Description_page.html
+++ b/Description_page.html
@@ -21,7 +21,7 @@
     
             <li><a href="Contact_Me.html">Contact Me</a></li>
     
-            <li class="gobutton"><a href="About_Me_Main.html">Go</a></li>
+            <li class="gobutton"><a href="index.html">Go</a></li>
         </div>
         </ul>
         </nav>
